<?xml version="1.0"?>
<package>
  <name>promobot_example_app_sip</name>
  <version>2.0.0</version>
  <description>SIP Example</description>

  <maintainer email="info@promo-bot.ru">Promobot LLC</maintainer>
  <url type="website">https://promo-bot.ru/sdk</url>
  
  <author email="sidorov@promo-bot.ru">Ivan Sidorov</author>
  
  <license>TODO</license>

  <buildtool_depend>catkin</buildtool_depend>
  
  <build_depend>libqtpromobot</build_depend>
  <build_depend>libqtapplicationbase</build_depend>

  <run_depend>libqtpromobot</run_depend>
  <run_depend>libqtapplicationbase</run_depend>

  <export>
  </export>
</package>
