<?xml version="1.0"?>
<package>
  <name>promobot_app_OVE54</name>
  <version>2.0.0</version>
  <description>The promobot common library package</description>

  <maintainer email="pincu.catalin@yahoo.com">Catalin Pincu</maintainer>
  <url type="website">www.bucharestrobots.com</url>
  
  <author email="pincu.catalin@yahoo.com">Pincu Mihai Catalin</author>
  
  <license>TODO</license>

  <buildtool_depend>catkin</buildtool_depend>
  
 <build_depend>libqtpromobot</build_depend>
  <build_depend>libqtpromobotwidgets</build_depend>
  <build_depend>libqtapplicationbase</build_depend>
  <build_depend>libqtapplicationwidgets</build_depend>

  <run_depend>libqtpromobot</run_depend>
  <run_depend>libqtpromobotwidgets</run_depend>
  <run_depend>libqtapplicationbase</run_depend>
  <run_depend>libqtapplicationwidgets</run_depend>

  <export>
  </export>
</package>
