<?xml version="1.0"?>
<package>
  <name>promobot_app_OveNewSdk4</name>
  <version>2.0.0</version>
  <description>App for using the OVE registration API</description>

  <maintainer email="pincu.catalin@yahoo.com">Pincu Catalin</maintainer>
  <url type="website">https://bucharestrobots.com/</url>
  
  <author email="pincu.catalin@yahoo.com">Pincu Mihai Catalin</author>

  <license>TODO</license>

  <buildtool_depend>catkin</buildtool_depend>
  
  <build_depend>libqtpromobot</build_depend>
  <build_depend>libqtpromobotwidgets</build_depend>
  <build_depend>libqtapplicationbase</build_depend>
  <build_depend>libqtapplicationwidgets</build_depend>
  <build_depend>QtPrintSupport</build_depend>

  <run_depend>libqtpromobot</run_depend>
  <run_depend>libqtpromobotwidgets</run_depend>
  <run_depend>libqtapplicationbase</run_depend>
  <run_depend>libqtapplicationwidgets</run_depend>
  <run_depend>QtPrintSupport</run_depend>

  <export>
  </export>
</package>
